packages/@lwc/template-compiler/src/__tests__/fixtures/parsing-errors/invalid-template-attribute/single-attribute/expected.js
import { registerTemplate } from "lwc";
function tmpl($api, $cmp, $slotset, $ctx) {
  const {} = $api;
  return [[]];
}
export default registerTemplate(tmpl);
tmpl.stylesheets = [];
